# poster.tg

./: .dockerignore  Dockerfile  README.md  compose.yaml  project_files_tree.md  pyproject.toml  requirements.txt
bot/: __main__.py
docs/: report.pages  report_29.docx  ~$port_29.docx  Характеристика.pages
report.pages/Metadata/: BuildVersionHistory.plist  DocumentIdentifier  Properties.plist
src/anounce/: __main__.py  abc_parse.py  abcparse_notion.py  abcview.py  anounce_view.py  parse_notion.py  parse_result.py  parse_route.py  parseroute.py  send_anounce.py  test.json
src/anounce/abs/: __init__.py  abc_create_route.py  abc_parse.py  abc_parse_route.py  abc_route_provider.py  abc_send.py  abc_view.py  abcparse_notion.py  abcview.py
src/anounce/ride/: __init__.py  create_ride.py  model.py  route.py  test_create_ride.py
src/anounce/ride/abs/: __init__.py  abc_create_ride.py  abc_request_ride.py
src/anounce/ride/implementations/: __init__.py  create_ride.py  request_ride.py
src/anounce/ride/obs/: abccreate_ride.py
src/anounce/route/: __init__.py  model.py
src/anounce/route/abs/: __init__.py  abc_create_route.py  abc_parse_route.py
src/anounce/route/implementations/: __init__.py  create_route.py  parse_route.py
src/anounce/tests/: test_anounce_viev.py  test_create_ride.py  test_create_route.py  test_parse_route.py
src/bot/: __main__.py
src/handlers/: callbackdata_participate_button_1_1.py  start_message_handler.py
src/keyboards/: __init__.py  seen.py
src/models/bot/: __init__.py  keyboard.py  message_handler.py  view.py
src/models/notion_calendar/: calendar.py
src/views/: __init__.py  anounce.py
stubs/telebot/: __init__.pyi  apihelper.pyi  async_telebot.pyi  asyncio_filters.pyi  asyncio_handler_backends.pyi  asyncio_helper.pyi  callback_data.pyi  custom_filters.pyi  formatting.pyi  handler_backends.pyi  service_utils.pyi  types.pyi  util.pyi
stubs/telebot/asyncio_storage/: __init__.pyi  base_storage.pyi  memory_storage.pyi  pickle_storage.pyi  redis_storage.pyi
stubs/telebot/ext/: reloader.pyi
stubs/telebot/ext/aio/: __init__.pyi
stubs/telebot/ext/sync/: __init__.pyi
stubs/telebot/storage/: __init__.pyi  base_storage.pyi  memory_storage.pyi  pickle_storage.pyi  redis_storage.pyi
